# pyspark-project-template

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
Jenkins_image/: Readme.md
UNKNOWN.egg-info/: SOURCES.txt
jenkins/: build_image.sh
pyspark_template_project.egg-info/: PKG-INFO  SOURCES.txt
src/pyspark_project_template.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_app.py
