[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-project-template"
description = "My package description"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Framework :: Pyspark",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"',
]
dynamic = ["version"]
